--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,15 +1,26 @@
 spring:
   application:
     name: UrlShortener
+  datasource:
+    url: jdbc:postgresql://localhost:5432/url-shortener
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: postgres
+    jpa:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+      properties:
+        hibernate.format_sql: true
 
-  cassandra:
-    contact-points:
-      - 172.21.0.2:9042
-    local-datacenter: datacenter1
-    connection:
-      connect-timeout: 10s
-      init-query-timeout: 10s
-  data:
-    cassandra:
-      keyspace-name: encurtador_url
-      schema-action: create_if_not_exists
+#  cassandra:
+#    contact-points:
+#      - 172.21.0.2:9042
+#    local-datacenter: datacenter1
+#    connection:
+#      connect-timeout: 10s
+#      init-query-timeout: 10s
+#  data:
+#    cassandra:
+#      keyspace-name: encurtador_url
+#      schema-action: create_if_not_exists
